# Tubes-SDA-Kelompok4

./: CMakeLists.txt  ClevCalc.dev  ClevCalc.layout  Makefile.win  README.md  StackDinamis.c  StackDinamis.h  calculator.c  calculator.h  howto.txt  isValid.c  main.c  temperature.c  temperature.h  tree.c  tree.h
ClevCalc/: CMakeLists.txt  main.c
ClevCalc/include/: calculator.h  tree.h
ClevCalc/src/: calculator.c  tree.c
SymbolicC++/headers/symbolic/: number.h  symbolicc++.h  symmatrix.h
common/: howto.txt
include/: StackDinamis.h  calculator.h  integral.h  konvTrigonometri.h  temperature.h  tree.h
src/: StackDinamis.c  calculator.c  gotoxy.c  integral.cpp  konvTrigonometri.c  temperature.c  tree.c
tampilan/: TampilanMainMenu.c  gotoxy.c  menutemperatur.c  temperature.c  temperature.h
